--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -40,7 +40,8 @@ env:
   IMAGE_NAME: shaowenchen/xpu-benchmark
 
 jobs:
-  build-training:
+  # Stage 1: Build and push amd64 images
+  build-amd64:
     runs-on: ubuntu-latest
     if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'training' || github.event.inputs.image_type == ''
     steps:
@@ -58,37 +59,25 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=raw,value=npu-training-latest
-
-    - name: Build and push Docker image
+    - name: Build and push amd64 training image
       uses: docker/build-push-action@v5
       with:
         context: npu/training
         file: npu/training/Dockerfile
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        platforms: |
-          linux/amd64
-          linux/arm64
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-amd64
+        platforms: linux/amd64
 
-    - name: Build summary
+    - name: Build summary amd64
       if: always()
       run: |
-        echo "Built multi-arch image: npu-training"
-        echo "Platforms: linux/amd64, linux/arm64"
+        echo "Built amd64 image: npu-training-latest-amd64"
+        echo "Platform: linux/amd64"
         echo "Context: npu/training"
-        echo "Dockerfile: npu/training/Dockerfile"
 
-  build-inference:
+  build-inference-amd64:
     runs-on: ubuntu-latest
-    needs: build-training
+    needs: build-amd64
     if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'inference' || github.event.inputs.image_type == ''
     steps:
     - name: Checkout repository
@@ -105,37 +94,25 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=raw,value=npu-inference-latest
-
-    - name: Build and push Docker image
+    - name: Build and push amd64 inference image
       uses: docker/build-push-action@v5
       with:
         context: npu/inference
         file: npu/inference/Dockerfile
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        platforms: |
-          linux/amd64
-          linux/arm64
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-amd64
+        platforms: linux/amd64
 
-    - name: Build summary
+    - name: Build summary amd64 inference
       if: always()
       run: |
-        echo "Built multi-arch image: npu-inference"
-        echo "Platforms: linux/amd64, linux/arm64"
+        echo "Built amd64 image: npu-inference-latest-amd64"
+        echo "Platform: linux/amd64"
         echo "Context: npu/inference"
-        echo "Dockerfile: npu/inference/Dockerfile"
 
-  build-stress:
+  build-stress-amd64:
     runs-on: ubuntu-latest
-    needs: build-inference
+    needs: build-inference-amd64
     if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'stress' || github.event.inputs.image_type == ''
     steps:
     - name: Checkout repository
@@ -152,30 +129,224 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=raw,value=npu-stress-latest
-
-    - name: Build and push Docker image
+    - name: Build and push amd64 stress image
       uses: docker/build-push-action@v5
       with:
         context: npu/stress
         file: npu/stress/Dockerfile
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        platforms: |
-          linux/amd64
-          linux/arm64
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-amd64
+        platforms: linux/amd64
 
-    - name: Build summary
+    - name: Build summary amd64 stress
       if: always()
       run: |
-        echo "Built multi-arch image: npu-stress"
-        echo "Platforms: linux/amd64, linux/arm64"
+        echo "Built amd64 image: npu-stress-latest-amd64"
+        echo "Platform: linux/amd64"
         echo "Context: npu/stress"
-        echo "Dockerfile: npu/stress/Dockerfile" 
+
+  # Stage 2: Build and push arm64 images
+  build-arm64:
+    runs-on: ubuntu-latest
+    needs: build-stress-amd64
+    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'training' || github.event.inputs.image_type == ''
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push arm64 training image
+      uses: docker/build-push-action@v5
+      with:
+        context: npu/training
+        file: npu/training/Dockerfile
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-arm64
+        platforms: linux/arm64
+
+    - name: Build summary arm64
+      if: always()
+      run: |
+        echo "Built arm64 image: npu-training-latest-arm64"
+        echo "Platform: linux/arm64"
+        echo "Context: npu/training"
+
+  build-inference-arm64:
+    runs-on: ubuntu-latest
+    needs: build-arm64
+    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'inference' || github.event.inputs.image_type == ''
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push arm64 inference image
+      uses: docker/build-push-action@v5
+      with:
+        context: npu/inference
+        file: npu/inference/Dockerfile
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-arm64
+        platforms: linux/arm64
+
+    - name: Build summary arm64 inference
+      if: always()
+      run: |
+        echo "Built arm64 image: npu-inference-latest-arm64"
+        echo "Platform: linux/arm64"
+        echo "Context: npu/inference"
+
+  build-stress-arm64:
+    runs-on: ubuntu-latest
+    needs: build-inference-arm64
+    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'stress' || github.event.inputs.image_type == ''
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push arm64 stress image
+      uses: docker/build-push-action@v5
+      with:
+        context: npu/stress
+        file: npu/stress/Dockerfile
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-arm64
+        platforms: linux/arm64
+
+    - name: Build summary arm64 stress
+      if: always()
+      run: |
+        echo "Built arm64 image: npu-stress-latest-arm64"
+        echo "Platform: linux/arm64"
+        echo "Context: npu/stress"
+
+  # Stage 3: Create and push multi-arch images
+  create-multiarch-training:
+    runs-on: ubuntu-latest
+    needs: build-stress-arm64
+    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'training' || github.event.inputs.image_type == ''
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Create multi-arch training image
+      if: github.event_name != 'pull_request'
+      run: |
+        docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest \
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-amd64 \
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-arm64
+        docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest
+
+    - name: Multi-arch summary training
+      if: always()
+      run: |
+        echo "Created multi-arch image: npu-training-latest"
+        echo "Combined: npu-training-latest-amd64 + npu-training-latest-arm64"
+
+  create-multiarch-inference:
+    runs-on: ubuntu-latest
+    needs: create-multiarch-training
+    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'inference' || github.event.inputs.image_type == ''
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Create multi-arch inference image
+      if: github.event_name != 'pull_request'
+      run: |
+        docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest \
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-amd64 \
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-arm64
+        docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest
+
+    - name: Multi-arch summary inference
+      if: always()
+      run: |
+        echo "Created multi-arch image: npu-inference-latest"
+        echo "Combined: npu-inference-latest-amd64 + npu-inference-latest-arm64"
+
+  create-multiarch-stress:
+    runs-on: ubuntu-latest
+    needs: create-multiarch-inference
+    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'stress' || github.event.inputs.image_type == ''
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Create multi-arch stress image
+      if: github.event_name != 'pull_request'
+      run: |
+        docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest \
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-amd64 \
+          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-arm64
+        docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest
+
+    - name: Multi-arch summary stress
+      if: always()
+      run: |
+        echo "Created multi-arch image: npu-stress-latest"
+        echo "Combined: npu-stress-latest-amd64 + npu-stress-latest-arm64" 
