--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -48,9 +48,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
@@ -60,13 +57,17 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push amd64 training image
-      uses: docker/build-push-action@v5
-      with:
-        context: npu/training
-        file: npu/training/Dockerfile
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-amd64
-        platforms: linux/amd64
+      if: github.event_name != 'pull_request'
+      run: |
+        docker build --platform linux/amd64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-amd64 -f npu/training/Dockerfile npu/training
+        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-amd64
+      shell: bash
+
+    - name: Build amd64 training image (PR)
+      if: github.event_name == 'pull_request'
+      run: |
+        docker build --platform linux/amd64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-amd64 -f npu/training/Dockerfile npu/training
+      shell: bash
 
     - name: Build summary amd64
       if: always()
@@ -83,9 +84,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
@@ -95,13 +93,17 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push amd64 inference image
-      uses: docker/build-push-action@v5
-      with:
-        context: npu/inference
-        file: npu/inference/Dockerfile
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-amd64
-        platforms: linux/amd64
+      if: github.event_name != 'pull_request'
+      run: |
+        docker build --platform linux/amd64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-amd64 -f npu/inference/Dockerfile npu/inference
+        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-amd64
+      shell: bash
+
+    - name: Build amd64 inference image (PR)
+      if: github.event_name == 'pull_request'
+      run: |
+        docker build --platform linux/amd64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-amd64 -f npu/inference/Dockerfile npu/inference
+      shell: bash
 
     - name: Build summary amd64 inference
       if: always()
@@ -118,9 +120,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
@@ -130,13 +129,17 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push amd64 stress image
-      uses: docker/build-push-action@v5
-      with:
-        context: npu/stress
-        file: npu/stress/Dockerfile
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-amd64
-        platforms: linux/amd64
+      if: github.event_name != 'pull_request'
+      run: |
+        docker build --platform linux/amd64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-amd64 -f npu/stress/Dockerfile npu/stress
+        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-amd64
+      shell: bash
+
+    - name: Build amd64 stress image (PR)
+      if: github.event_name == 'pull_request'
+      run: |
+        docker build --platform linux/amd64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-amd64 -f npu/stress/Dockerfile npu/stress
+      shell: bash
 
     - name: Build summary amd64 stress
       if: always()
@@ -154,9 +157,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
@@ -166,13 +166,17 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push arm64 training image
-      uses: docker/build-push-action@v5
-      with:
-        context: npu/training
-        file: npu/training/Dockerfile
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-arm64
-        platforms: linux/arm64
+      if: github.event_name != 'pull_request'
+      run: |
+        docker build --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-arm64 -f npu/training/Dockerfile npu/training
+        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-arm64
+      shell: bash
+
+    - name: Build arm64 training image (PR)
+      if: github.event_name == 'pull_request'
+      run: |
+        docker build --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-arm64 -f npu/training/Dockerfile npu/training
+      shell: bash
 
     - name: Build summary arm64
       if: always()
@@ -189,9 +193,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
@@ -201,13 +202,17 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push arm64 inference image
-      uses: docker/build-push-action@v5
-      with:
-        context: npu/inference
-        file: npu/inference/Dockerfile
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-arm64
-        platforms: linux/arm64
+      if: github.event_name != 'pull_request'
+      run: |
+        docker build --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-arm64 -f npu/inference/Dockerfile npu/inference
+        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-arm64
+      shell: bash
+
+    - name: Build arm64 inference image (PR)
+      if: github.event_name == 'pull_request'
+      run: |
+        docker build --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-arm64 -f npu/inference/Dockerfile npu/inference
+      shell: bash
 
     - name: Build summary arm64 inference
       if: always()
@@ -224,9 +229,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
@@ -236,13 +238,17 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push arm64 stress image
-      uses: docker/build-push-action@v5
-      with:
-        context: npu/stress
-        file: npu/stress/Dockerfile
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-arm64
-        platforms: linux/arm64
+      if: github.event_name != 'pull_request'
+      run: |
+        docker build --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-arm64 -f npu/stress/Dockerfile npu/stress
+        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-arm64
+      shell: bash
+
+    - name: Build arm64 stress image (PR)
+      if: github.event_name == 'pull_request'
+      run: |
+        docker build --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-arm64 -f npu/stress/Dockerfile npu/stress
+      shell: bash
 
     - name: Build summary arm64 stress
       if: always()
@@ -259,9 +265,6 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
@@ -293,9 +296,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
@@ -325,9 +325,6 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
 
     - name: Log in to Docker Hub
       if: github.event_name != 'pull_request'
